# alquant_swe_takehome_exercise

./: .gitignore  README.md
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.vue
client/src/components/: CenteredHero.vue  DataLoader.vue  DataTable.vue  DatePickerWrapper.vue  ErrorBox.vue  FadeIn.vue  LoadingSpinner.vue  NavBar.vue
client/src/composables/: useDataFetch.ts  useStartDate.ts
client/src/router/: index.ts
client/src/views/: HomeView.vue  PerformanceView.vue  StatisticsView.vue
server/: package-lock.json  package.json  pyproject.toml  serverless.yml
server/server/: app.py  stocks.py
