[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Nassim <abdelghani.nassim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^20.1.0"
yfinance = "^0.2.18"
flask-caching = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
